--- a/Factory_method/pom.xml
+++ b/Factory_method/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.example</groupId>
-        <artifactId>FactoryMethod</artifactId>
+        <artifactId>Design_Patterns</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
